# zephyr

./: Kconfig.zephyr  MAINTAINERS.yml  rw61x_ear_release_notes.txt  rw61x_release_notes.txt  west.yml
boards/arm/bl5340_dvk/: bl5340_dvk_cpuapp_common.dtsi
boards/arm/mimxrt1060_evk/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  mimxrt1060_evk-pinctrl.dtsi  mimxrt1060_evk.dts  mimxrt1060_evkc.dts  mimxrt1060_evkc.yaml  mimxrt1060_evkc_defconfig
boards/arm/mimxrt1170_evk/: mimxrt1170_evk.dtsi  mimxrt1170_evk_cm7.dts  mimxrt1170_evk_cm7.yaml
boards/arm/rd_rw61x/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.cmake  init.c  rd_rw612_bga-pinctrl.dtsi  rd_rw612_bga.dts  rd_rw612_bga.dtsi  rd_rw612_bga.yaml  rd_rw612_bga_defconfig  rd_rw612_bga_ethernet.dts  rd_rw612_bga_ethernet.yaml  rd_rw612_bga_ns.dts  (+3 more)
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig.mcux  adc_mcux_gau_adc.c
drivers/clock_control/: clock_control_mcux_ccm.c  clock_control_mcux_ccm_rev2.c  clock_control_mcux_syscon.c
drivers/counter/: Kconfig.mcux_lpc_rtc
drivers/dac/: CMakeLists.txt  Kconfig.mcux
drivers/display/: CMakeLists.txt  Kconfig  Kconfig.st7796s  display_ili9xxx.c  display_st7796s.c
drivers/ethernet/: eth_mcux.c
drivers/flash/: CMakeLists.txt  flash_mcux_flexspi_nor.c
drivers/gpio/: gpio_mcux_lpc.c
drivers/hwinfo/: Kconfig  hwinfo_rw61x.c
drivers/memc/: CMakeLists.txt  Kconfig.mcux  memc_mcux_flexspi.c  memc_mcux_flexspi_is66wvq8m4.c
drivers/mipi_dbi/: CMakeLists.txt  Kconfig  mipi_dbi_nxp_lcdic.c  mipi_dbi_spi.c
drivers/pinctrl/: CMakeLists.txt  Kconfig  pinctrl_rw_iomux.c
drivers/power_domain/: CMakeLists.txt  Kconfig  power_domain_device_onoff.c
drivers/pwm/: pwm_mcux_sctimer.c
drivers/sensor/: CMakeLists.txt  Kconfig  sensor_shell.c
drivers/serial/: uart_mcux_flexcomm.c
drivers/timer/: mcux_os_timer.c
drivers/watchdog/: wdt_mcux_wwdt.c
drivers/wifi/: CMakeLists.txt  Kconfig
modules/: Kconfig  Kconfig.mcux
modules/hal_nxp/: CMakeLists.txt  fsl_os_abstraction.h  fsl_os_abstraction_zephyr.c
modules/mbedtls/: CMakeLists.txt  Kconfig.tls-generic
modules/trusted-firmware-m/: CMakeLists.txt  Kconfig  Kconfig.tfm  Kconfig.tfm.misc  Kconfig.tfm.platform
samples/boards/rd_rw612_bga/nxp_el2go_agent_demo_wifi/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/boards/rd_rw612_bga/nxp_el2go_agent_demo_wifi/src/: mbedtls_user_config.h  psa_get_key_enrollment_algorithm.c
samples/boards/rd_rw612_bga/nxp_el2go_claimcode_encryption/: CMakeLists.txt  Kconfig  README.rst  prj.conf  sample.yaml
samples/boards/rd_rw612_bga/nxp_mfg_bridge/: CMakeLists.txt  Kconfig  README.rst  sample.yaml
samples/boards/rd_rw612_bga/nxp_mfg_bridge/src/: main.c
submanifests/: rw61x.yaml
(+223 files in other folders)
